--- a/index.css
+++ b/index.css
@@ -1,4 +1,15 @@
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: Cambria;
+}  
+
 h1 {
     font-size: 72pt;
     color: blue; 
+}
+
+.title {
+    
 }
