--- a/index.css
+++ b/index.css
@@ -1,15 +1,36 @@
+* {
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+    max-width: auto;        
+  }
+
 body {
     display: flex;
     flex-direction: column;
     align-items: center;
     font-family: Cambria;
-}  
+}
+
+header {
+    width: 75%;
+}
 
 h1 {
+    position: relative;
     font-size: 72pt;
     color: blue; 
 }
 
-.title {
-    
+.Title {
+    width: 75%;
+    text-align: center;
+    margin: auto;
+    max-width: 1000px;
+}
+
+nav {
+    margin: auto;
+    text-align: center;
+    width: 50%;
 }
