--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap");
+
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -14,7 +16,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Roboto Slab", serif;
   vertical-align: middle;
   margin: 0px;
   font-size: 2vh;
@@ -43,7 +45,6 @@ h1 {
 
 #titlediv {
   display: flex;
-  border-bottom: 1px solid black;
   width: 100%;
   background-color: #034748;
 }
@@ -55,11 +56,9 @@ h1 {
   max-width: 1000px;
   padding-bottom: 10px;
   color: white;
-  flex-wrap: nowrap;
 }
 
 #homeimg {
-  float: right;
   width: 15%;
   min-width: 150px;
   flex-shrink: 0;
@@ -78,30 +77,34 @@ nav > a {
   color: white;
   padding: 5px;
   text-decoration: none;
-  font-size: calc(12px + 1.5vw);
+  font-size: calc(12px + 1vw);
   flex: 1;
   text-align: center;
+  font-weight: bold;
 }
 
 nav > a:hover {
-  border: 1px solid silver;
+  border: 1px solid darkgrey;
+}
+
+nav > a:active {
+  background-color: darkgrey;
 }
 
 #homebio {
   padding: 1%;
   text-align: center;
-  width: 75%;
+  width: 85%;
 }
 
-#Main_Page_Top_Lists {
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.Main_Page_Top_List {
-  /* display: inline-block;
-  position: relative; */
-  flex: 1;
+#Main_Page_Lists {
+  display: grid;
+  grid-gap: 3px;
+  grid-template-columns: 0.5fr repeat(2, 1.5fr) 0.5fr;
+  grid-template-rows: repeat(2, auto);
+  grid-template-areas:
+    ". tl tr ."
+    ". bl br .";
 }
 
 .list_header {
@@ -109,37 +112,61 @@ nav > a:hover {
 }
 
 #topleftlist {
+  grid-area: tl;
   left: 5px;
   right: 5px;
+  background-color: #96ceb4;
+  border-radius: 25px;
 }
 
 #toprightlist {
+  grid-area: tr;
   overflow: hidden;
   left: 5px;
   right: 5px;
-}
-
-#Main_Page_Bottom_Lists {
-  display: flex;
-  justify-content: space-evenly;
-}
-
-#Main_Page_Bottom_List {
-  display: inline-block;
-  position: relative;
+  background-color: #ff6f69;
+  border-radius: 25px;
 }
 
 #bottomleftlist {
+  grid-area: bl;
   left: 5px;
   right: 5px;
+  background-color: #ffcc5c;
+  border-radius: 25px;
 }
 
 #bottomrightlist {
+  grid-area: br;
   overflow: hidden;
   left: 5px;
   right: 5px;
+  background-color: #88d8b0;
+  border-radius: 25px;
 }
 
-#extra_info {
+footer {
+  width: 100%;
   margin-top: 50px;
+}
+
+#footerdiv {
+  display: flex;
+  justify-content: space-between;
+  width: 75%;
+  margin: auto;
+}
+
+#footerdiv > a {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  margin: auto;
+  text-decoration: none;
+  flex: 1;
+}
+
+#footerdiv > a > img {
+  width: 100px;
+  margin: auto;
 }
