--- a/index.css
+++ b/index.css
@@ -43,7 +43,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 25%;
+  height: 40%;
   z-index: 1;
 }
 .bg-bubbles li {
@@ -197,7 +197,8 @@ nav {
   display: flex;
   justify-content: space-evenly;
   outline: 5px;
-  background-color: #1481ba;
+  background-color: darkgrey;
+  z-index: 2;
 }
 
 nav > a {
@@ -211,13 +212,19 @@ nav > a {
   font-weight: bold;
 }
 
+nav > a.active-page {
+  background-color: #626c66;
+}
+
 nav > a:hover {
-  border: 1px solid darkgrey;
+  border: 1px solid #626c66;
 }
 
 nav > a:active {
-  background-color: darkgrey;
+  background-color: #626c66;
 }
+
+/* Home Page */
 
 #homebio {
   padding: 1%;
@@ -297,4 +304,38 @@ footer {
 #footerdiv > a > img {
   width: 100px;
   margin: auto;
+}
+
+/* End Home Page */
+
+/* About Page */
+
+#bio {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-template-rows: repeat(8, auto);
+  width: 85%;
+}
+
+#firstpara {
+  grid-column: 1 / span 2;
+  grid-row: 1;
+}
+
+#secondpara {
+  grid-column: 1 / span 1;
+  grid-row: 2;
+}
+
+#bioicon {
+  grid-column: 2 / span 1;
+  grid-row: 2;
+  align-items: flex-end;
+  width: 100%;
+  border-radius: 20px;
+  background-color: transparent;
+}
+
+*/ .biopara {
+  width: 100%;
 }
