--- a/index.css
+++ b/index.css
@@ -167,6 +167,8 @@ img {
   max-width: 100%;
 }
 
+/* Typewriter effect */
+
 h1 {
   font-size: 3em;
   width: 70%;
@@ -177,7 +179,7 @@ h1 {
   padding-bottom: 10px;
   color: white;
   overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: 0.15em solid white; /* The typwriter cursor */
+  border-right: 0.15em solid white; /* The typewriter cursor */
   white-space: nowrap; /* Keeps the content on a single line */
   /* margin: 0 auto; /* Gives that scrolling effect as the typing happens
   margin-bottom: 0px; */
@@ -205,6 +207,8 @@ h1 {
     border-color: white;
   }
 }
+
+/* END Typewriter effect */
 
 #subtitle {
   font-size: 0.7em;
@@ -324,49 +328,8 @@ main > * {
   width: 85%;
 }
 
-#Main_Page_Lists {
-  display: grid;
-  grid-gap: 25px;
-  grid-template-columns: 0.5fr 1.5fr 0.5fr 1.5fr 0.5fr;
-  grid-template-rows: repeat(2, auto);
-  grid-template-areas:
-    ". tl . tr ."
-    ". bl . br .";
-  text-align: center;
-}
-
-#topleftlist {
-  grid-area: tl;
-  left: 5px;
-  right: 5px;
-  background-color: #96ceb4;
-  border-radius: 25px;
-}
-
-#toprightlist {
-  grid-area: tr;
-  overflow: hidden;
-  left: 5px;
-  right: 5px;
-  background-color: #ff6f69;
-  border-radius: 25px;
-}
-
-#bottomleftlist {
-  grid-area: bl;
-  left: 5px;
-  right: 5px;
-  background-color: #ffcc5c;
-  border-radius: 25px;
-}
-
-#bottomrightlist {
-  grid-area: br;
-  overflow: hidden;
-  left: 5px;
-  right: 5px;
-  background-color: #88d8b0;
-  border-radius: 25px;
+#home_content {
+  margin-top: 3.2%;
 }
 
 footer {
@@ -519,6 +482,11 @@ footer {
   list-style-type: none;
 }
 
+#past_experience_header {
+  margin-top: 2%;
+  margin-bottom: 3%;
+}
+
 .experience_wrapper_grow {
   display: flex;
   flex-direction: row;
@@ -638,7 +606,7 @@ i {
 .work_flex_container {
   display: flex;
   justify-content: space-evenly;
-  align-items: flex-start;
+  align-items: center;
   margin-right: 2%;
   margin-left: 2%;
   margin-bottom: 5%;
@@ -784,4 +752,13 @@ i {
     font-size: 3vh;
     margin: 0px;
   }
+}
+
+/* Contact Page */
+
+#contact_content {
+  margin-top: 3%;
+  padding: 1%;
+  text-align: center;
+  width: 85%;
 }
